<resources>
    <string name="app_name">Dinder</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="email">email</string>
    <string name="registrierung">Registrierung</string>
    <string name="registrieren">Registrieren</string>
    <string name="login_hier">Login hier</string>
    <string name="signUp">Create a new Account</string>
    <string name="willkommen_user">Willkommen User</string>
    <string name="attraktivste_profile">Attraktivste Profile</string>
    <string name="alter_geschlecht">Alter/Geschlecht</string>
    <string name="name_rasse">Name/Rasse</string>
    <string name="accountverwaltung">Accountverwaltung</string>
    <string name="daten_ndern">Daten ändern</string>
    <string name="mitgliedschaft">Mitgliedschaft</string>
    <string name="abmelden">Abmelden</string>
    <string name="sprache">Sprache</string>
    <string name="benutzername">Benutzername</string>
    <string name="e_mail">E-Mail</string>
    <string name="ort_plz">Ort/Plz</string>
    <string name="telefonnumer">Telefonnumer</string>
    <string name="strasse">Strasse</string>
    <string name="benutzerdaten">Benutzerdaten</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="mitgliedschaft_pausieren">Mitgliedschaft pausieren</string>
    <string name="mitgliedschaft_beenden">Mitgliedschaft beenden</string>
    <string name="grund_eingeben">Grund eingeben</string>
    <string name="tierprofil_erstellen">Tierprofil erstellen</string>
    <string name="bild_hochladen">Bild hochladen</string>
    <string name="name">Name</string>
    <string name="spezies">Spezies</string>
    <string name="rasse">Rasse</string>
    <string name="geschlecht">Geschlecht</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="merkmale">Merkmale</string>
    <string name="ihre_tierprofile">Ihre Tierprofile</string>
    <string name="partnersuche">Partnersuche</string>
    <string name="alter">Alter</string>
    <string name="merkmal2">Merkmal2</string>
    <string name="merkmal1">Merkmal1</string>
    <string name="suchen">suchen</string>
    <string name="ergebnisse">Ergebnisse</string>
    <string name="onlinestatus">Onlinestatus</string>
    <string name="userx_melden">UserX melden</string>
    <string name="melden">melden</string>
    <string name="nachrichten">Nachrichten</string>
    <string name="freund1">Freund1</string>
    <string name="user1">User1</string>
    <string name="freund2">Freund2</string>
    <string name="user3">User3</string>
    <string name="like_liste">Like-Liste</string>
    <string name="merkliste">Merkliste</string>
    <string name="profil">profil</string>
    <string name="birthday">birthday</string>
    <string name="institution">institution</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="gro_e">Große</string>
    <string name="erstellen">Erstellen</string>
    <string name="postleitzahl">Postleitzahl</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="entfernung">Entfernung</string>
    <string name="get_location">Get Location</string>
    <string name="freundesliste">Freundesliste</string>
    <string name="user2">User2</string>
    <string name="freundschaftsanfragen">Freundschaftsanfragen</string>
    <string name="freund3">Freund3</string>
    <string name="zur_ck_zum_start">Zurück zum Start</string>
</resources>